--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>TEST</title>
+    <link rel="stylesheet" href="assets/css/test.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/js/test.js"></script>
   </body>
 </html>
